--- a/installation/ansible/files/resticprofile.yml
+++ b/installation/ansible/files/resticprofile.yml
@@ -148,9 +148,11 @@
     - name: Generates resticprofile configuration file
       template:
         backup: yes
-        src: "../resticprofile/{{ inventory_hostname }}/profiles.conf"
-        dest: "/root/resticprofile/profiles.conf"
+        src: "{{ item }}"
+        dest: "/root/resticprofile/"
         mode: 0400
+      with_fileglob:
+        - "../resticprofile/{{ inventory_hostname }}/profiles.*"
 
     - name: Install other resticprofile files (like excludes)
       copy:
@@ -158,7 +160,7 @@
         dest: "/root/resticprofile/"
         owner: root
         group: root
-        mode: 0755
+        mode: 0444
       with_fileglob:
         - "../resticprofile/{{ inventory_hostname }}/copy/*"
 
